refactor: TestPiecesInHandVerifier